compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__sized_constant_value.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:64>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<256:64>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.BitArray_t {
  return gleam_P.ToBitArray(gleam_P.SizedInt(256, 64, true))
}
